public/style.css
/* ... */
.timeout-button-wrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 5px;
    width:44%;
    justify-content: space-between;
}

.timeout-label {
    font-size: 1rem;
    font-weight: 600;
}

.use-timeout-btn {
    background-color: var(--primary-color);
    color:var(--button-text);
    width: 80px;
    height: 80px;
    padding: 10px;
    border: none;
    border-radius: 500px !important;
    display: flex;
    align-items: center;
    justify-content: center;
}

.use-timeout-btn:hover {
    background-color: var(--secondary-color);
    border:none;
}

.timeout-count {
    font-size: 2rem;
    font-weight: 800;
}

/* Log and End Game Section */
.score-log {
    margin-top: 20px;
    padding-top: 20px;
}

ul {
    list-style-type: none;
    padding: 0;
}

.log-container {
    padding: 20px;
    border: 1px solid var(--section-border);
    border-radius: 8px;
}

.log-container ul {
    margin-top:5px;
}

.log-placeholder {
    color:var(--notes-color);
}

li {
    /* background-color: var(--secondary-button-bgnd); */
    border-bottom: 1px solid var(--secondary-button-bgnd-hover);
    padding: 8px;
    margin-bottom: 5px;
    border-radius: 0px;
}

#score-log li, #timeout-log li, #defence-log li, #summary-score-log li, #summary-timeout-log li, #summary-defence-log li {
    font-weight: 400;
    line-height: 1.3em;
}

.log-title {
    text-align: left;
    margin-top:0px;
}

h4.log-title {
    margin-bottom:0px;
}

button.defence-stats-btn {
    padding:6px 15px 8px 15px;
}

/* Styles for the undo and end game buttons */
.action-buttons {
    display: flex;
    flex-direction: column;
    gap: 10px;
    margin-top: 20px;
}

.undo-btn, .end-game-btn {
    width: 100%;
    padding: 15px;
    font-size: 1.2rem;
}

.undo-btn {
    color: var(--primary-color);
    background-color:var(--background-color);
    border:1px solid var(--secondary-button-bgnd-hover);
    font-weight: 600;
}

.undo-btn:hover {
    color: var(--text-color);
    background-color:var(--secondary-button-bgnd);
    border:1px solid var(--secondary-button-bgnd-hover);
}

/* .end-game-btn {
    background-color: #dc3545;
    border:none;
    font-weight: 600;
}

.end-game-btn:hover {
    background-color: #c82333;
    border:none;
} */

/* New: Styles for the pop-up modal overlay */
#score-popup, #defence-popup {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: var(--background-color);
    display: flex;
    justify-content: center;
    align-items: start;
    z-index: 100;
}

.popup-content, .defence-popup-content {
    background-color: var(--background-color);
    padding: 40px 20px calc(140px + env(safe-area-inset-bottom)) 20px;
    width: 100%;
    max-width: 740px;
    margin: 0 auto;
}

.popup-content h2, .defence-popup-content h2 {
    text-align: left;
}

#score-popup h2 {
    margin-bottom:0px;
}

.score-popup-notes {
    margin-top:5px;
}

.popup-content input, .defence-popup-content input {
    /* border-radius: 500px; */
    /* font-size:20px; */
    font-weight:bold;
    border-radius: 8px;
    font-size: 30px;
    font-weight: 900;
    background: var(--focus-color);
    border-color: var(--focus-color);
    color:var(--primary-color);
    text-align: center;
}

#log-score-btn, #log-defence-stat-btn {
    padding:8px 15px 12px 15px;
}

#cancel-popup-btn svg, #defence-cancel-popup-btn svg {
    width:30px;
    height:30px;
}

.player-input-grid, .defence-input-grid {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 15px;
}

.player-input-grid > *:first-child {
    grid-column: span 2;
}

.player-input-grid > div, .defence-input-grid > div {
    display: flex;
    flex-direction: column;
}

.popup-buttons {
    display: flex;
    justify-content: right;
    margin-top: 20px;
}

.popup-buttons #cancel-popup-btn, .popup-buttons #defence-cancel-popup-btn {
    background-color:var(--background-color);
    border-color:var(--primary-color);
    color:var(--primary-color);
}

.popup-buttons #cancel-popup-btn:hover, .popup-buttons #defence-cancel-popup-btn:hover {
    background-color:var(--secondary-color);
    border-color:var(--secondary-color);
    color:var(--background-color);
}

/* Hides the time stamp element in the logs when in Stats Tracker View */
body.role-stats .log-time-stamp {
    display: none !important;
}

/* New styles for the game summary screen */
#game-summary {
    padding: 50px 20px;
    text-align: center;
    max-width:480px;
    width:100%;
}

.logo-image-summary {
    width:180px;
    margin-bottom:20px;
}

/* Styling for the summary logos */
.summary-logo {
    width: 40px; /* Adjust size as needed */
    height: 40px; 
    object-fit: contain;
    margin-right: 0px;
}

/* Optional: Style the container to align name/score/logo nicely */
.summary-team-block {
    display: flex;
    align-items: center;
    gap: 10px;
}

.summary-scoreboard {
    display: flex;
    justify-content: center;
    gap: 20px;
    margin-top: 20px;
}

@media (max-width: 360px) {
    .summary-scoreboard {
        flex-wrap:wrap;
    }
}

.summary-team {
    display: flex;
    flex-direction: column;
    align-items: center;
    border: 1px solid var(--focus-color);
    background-color:var(--focus-color);
    width: 50%;
    padding: 20px;
    border-radius:6px;
    justify-content: space-between;
}

@media (max-width: 480px) {
    .summary-team {
        width: 100%;
    }
}

.summary-team-name {
    font-size: 18px;
    font-weight: 700;
    color: var(--primary-color);
}

.summary-score {
    font-size: 60px;
    font-weight: 800;
    color: var(--primary-color);
    margin-top:10px;
}

.summary-logs {
    margin-top: 40px;
    text-align: left;
}

#download-summary-btn {
    background:var(--background-color);
    border-color:var(--primary-color);
    color:var(--primary-color);  
    width:240px; 
    margin:0 auto;
    margin-top:40px;
}
/* ... */

